--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
 <title>index</title>
+<link rel="stylesheet" href="./css/index.css">
 </head>
 <body><h1 id='my-blogs'>My Blogs</h1>
 <p>&nbsp;</p>
