--- a/index.html
+++ b/index.html
@@ -219,496 +219,93 @@ mjx-container { break-inside: avoid; }
 .md-alert-text-container::after { content: attr(data-text); text-transform: capitalize; pointer-events: none; margin-right: 1ch; }
 
 
-:root {
-    --bg-color: white;
-    /*change background*/
-    --text-color: black;
-    /*change text color*/
-    --md-char-color: #C7C5C5;
-    /*change color of meta characetrs like `*` in markdown */
-    --meta-content-color: #5b808d;
-    /*change color of meta contents like image text or link address in markdown */
+/* Turing CSS */
+/* By Mistrza */
 
-    --primary-color: #428bca;
-    /* color of primary buttons */
-    --primary-btn-border-color: #285e8e;
-    --primary-btn-text-color: #fff;
-
-    --window-border: 1px solid #eee;
-    /*border for sidebar, etc*/
-
-    --active-file-bg-color: #eee;
-    /*background color if list item in file tree or file list*/
-    --active-file-text-color: inherit;
-    --active-file-border-color: #777;
-
-    --side-bar-bg-color: var(--bg-color);
-    /*change background of sidebar*/
-    --item-hover-bg-color: rgba(229, 229, 229, 0.59);
-    /*background of control items when hover, like menu in sidebar*/
-    --item-hover-text-color: inherit;
-    --monospace: monospace;
-    /*monospace font for codes, fences*/
-}
-
-
-/***************** 这里定义一些全局信息****************/
-
-html,
-body,
-#write {
-    background: white;
-    font-family: 'SF Pro', 'Noto Serif SC';
-    font-weight: normal;
-    max-width: 55rem;
-}
-
+/* 基本设置 */
 body {
-    margin: auto;
+     background-color: #fbfbfb; /* 背景颜色 */
+     color: #333; /* 主文本颜色 */
+     font-family: 'Manjari', monospace; /* 设置全局字体为 Manjari */
+     font-weight: bold; /* 文本加粗 */
+     text-decoration-skip: none; /* 保留装饰线效果 */
+     text-align: justify; /* 文本两端对齐 */
 }
 
-html {
-    font-size: 18px;
+/* 设置所有文本元素的字体和大小 */
+ h1, h2, h3, h4, h5, h6, p, li, .cm-s-inner, .footnote-line {
+     font-family: 'Manjari'; /* 字体设置 */
+     font-size: 22px; /* 调整后的字体大小 */
 }
 
-#write {
-    margin: auto;
-    text-align: justify;
+/* 标题对齐和样式 */
+ h1, h2 {
+     text-align: center; /* 居中对齐 h1 和 h2 */
+}
+ h1 {
+     text-transform: uppercase; /* h1 转换为大写 */
 }
 
+/* 下划线装饰的元素 */
+ h2, h3, em, th, .cm-keyword {
+     text-decoration: underline; /* 增加下划线装饰 */
+}
+
+/* 引用和加粗文本颜色 */
+ blockquote, strong {
+     color: darkblue; /* 设置为深蓝色 */
+}
+
+/* 引用块的左右边距 */
+ blockquote {
+     margin-left: 30px;
+     margin-right: 30px;
+}
+
+/* 链接颜色和脚注行颜色 */
+a, .footnote-line {
+     color: #333; /* 链接颜色设置 */
+}
+
+/* 强调和加粗文本样式 */
+ em, strong {
+     font-style: normal; /* 清除斜体效果 */
+}
+
+/* 无序列表样式 */
+ ul {
+     list-style-type: square; /* 列表样式为方形 */
+}
+
+/* 内容最大宽度 */
+ #write {
+     max-width: 60em; /* 限制内容最大宽度 */
+}
+
+/* 页脚分隔线样式 */
+ #footer p {
+     border-top: 2px solid #333; /* 页脚分隔线 */
+     margin-top: 10px; /* 间距 */
+}
+
+/* 代码块样式 */
+ .cm-s-inner {
+     font-family: 'Manjari'; /* 字体为 Manjari */
+     border-left: 2px solid #333; /* 左侧边框 */
+     padding-left: 1em; /* 左侧内边距 */
+}
+ .cm-s-inner * {
+     color: #333 !important; /* 代码颜色设置 */
+}
 
 /***************** 这里定义水平线的样式 ****************/
 
 hr {
-    border: none;
-    border-top: 1px dashed #333;
-    color: #333;
+    border: none; /* 移除默认边框 */
+    border-top: 3px solid #333; /* 加粗的实线样式 */
+    color: #333; /* 颜色设置 */
 }
 
-
-/***************** 这里定义脚注的样式 ****************/
-
-sup[md-inline="footnote"] {
-    background-color: white;
-    font-size: 0.8rem;
-    padding: 0;
-}
-
-sup[md-inline="footnote"]:before {
-    content: '[';
-}
-
-sup[md-inline="footnote"]:after {
-    content: ']';
-}
-
-
-/***************** 这里定义链接的样式 ****************/
-
-a {
-    color: #285e8e;
-}
-
-
-/***************** 这里定义ToC的样式 ****************/
-
-.md-toc-content {
-    font-family: 'SF Pro', 'Noto Serif SC';
-}
-
-.md-toc-h1 {
-    font-family: 'Pinyon Script', 'Noto Serif SC';
-    margin-left: 0;
-    font-size: 1rem;
-}
-
-.md-toc-h2 {
-    font-size: 1rem;
-    margin-left: 2rem;
-}
-
-.md-toc-h3 {
-    margin-left: 3rem;
-    font-size: 1rem;
-}
-
-.md-toc-h4 {
-    margin-left: 4rem;
-    font-size: 1rem;
-}
-
-.md-toc-h5 {
-    margin-left: 5rem;
-    font-size: 1rem;
-}
-
-.md-toc-h6 {
-    margin-left: 6rem;
-    font-size: 1rem;
-}
-
-/* 一级标题小红点 */
-.md-toc-h1:before {
-    content: "🔴"; /* 红色小圆点 */
-    display: inline-block;
-    vertical-align: middle;
-    transform: scale(0.4); /* 缩小圆点到原大小的40% */
-    margin-right: 5px; /* 图标与文本之间的间距 */
-}
-
-.md-toc-h1 .md-toc-inner {
-    margin-left: 0;
-}
-
-/* 二级标题小蓝点 */
-.md-toc-h2:before {
-    content: "🟡"; /* 蓝色小圆点 */
-    display: inline-block;
-    vertical-align: middle;
-    transform: scale(0.4); /* 缩小圆点 */
-    margin-right: 5px;
-
-}
-
-.md-toc-h2 .md-toc-inner {
-    margin-left: 0;
-}
-
-
-/* 三级标题小橙点 */
-.md-toc-h3:before {
-    content: "🟢"; /* 橙色小圆点 */
-    display: inline-block;
-    vertical-align: middle;
-    transform: scale(0.4); /* 缩小圆点 */
-    margin-right: 5px;
-}
-
-.md-toc-h3 .md-toc-inner {
-    margin-left: 0;
-}
-
-/* 四级标题小绿点 */
-.md-toc-h4:before {
-    content: "🔵"; /* 绿色小圆点 */
-    display: inline-block;
-    vertical-align: middle;
-    transform: scale(0.4); /* 缩小圆点 */
-    margin-right: 5px;
-}
-
-.md-toc-h4 .md-toc-inner {
-    margin-left: 0;
-}
-
-
-/* 五级标题小黄点 */
-.md-toc-h5:before {
-    content: "🟠"; /* 黄色小圆点 */
-    display: inline-block;
-    vertical-align: middle;
-    transform: scale(0.4); /* 缩小圆点 */
-    margin-right: 5px;
-}
-
-.md-toc-h5 .md-toc-inner {
-    margin-left: 0;
-}
-
-/* 六级标题小紫点 */
-.md-toc-h6:before {
-    content: "🟣 "; /* 紫色小圆点 */
-    display: inline-block;
-    vertical-align: middle;
-    transform: scale(0.4); /* 缩小圆点 */
-    margin-right: 5px;
-}
-
-.md-toc-h6 .md-toc-inner {
-    margin-left: 0;
-}
-
-
-/***************** 这里定义任务列表的样式 ****************/
-
-.md-task-list-item>input {
-    width: 1rem;
-    height: 1rem;
-    display: block;
-    -webkit-appearance: initial;
-    margin-left: -1.5rem;
-    margin-top: .375rem;
-    border: 0;
-}
-
-.md-task-list-item>input:focus {
-    outline: none;
-    box-shadow: none;
-}
-
-.md-task-list-item>input:before {
-    border: 1px solid #555;
-    border-radius: calc(1rem);
-    width: calc(1rem);
-    height: calc(1rem);
-    background: #fff;
-    content: '';
-    transition: background-color 200ms ease-in-out;
-    display: block;
-}
-
-.md-task-list-item>input:checked:before,
-.md-task-list-item>input[checked]:before {
-    background: #333;
-    display: inline-block;
-    transition: background-color 200ms ease-in-out;
-}
-
-.md-task-list-item>input:checked:after,
-.md-task-list-item>input[checked]:after {
-    opacity: 0;
-}
-
-.task-list-done {
-    /* styles for completed tasks */
-    text-decoration: line-through;
-}
-
-
-/***************** 这里定义YAML头部的样式 ****************/
-
-#write pre.md-meta-block {
-    font-family: 'SF Pro', 'Noto Serif SC';
-    padding: 1rem;
-    font-size: 85%;
-    line-height: 1.45;
-    background-color: #f7f7f7;
-    border: 0;
-    border-radius: 3px;
-    color: #777777;
-    margin-top: 0 !important;
-}
-
-
-/***************** 这里定义代码的样式 ****************/
-
-code {
-    font-family: 'SF Pro';
-    padding: .1rem;
-    background: #f0f0f0;
-    font-size: 0.9rem;
-    margin-left: 0.15rem;
-    margin-right: 0.15rem;
-}
-
-.md-fences {
-    font-family: 'Monaco';
-    border: 1px solid #e7eaed;
-    background-color: #f8f8f8;
-    border-radius: 3px;
-    padding: 0;
-    padding: 2px 4px 0px 4px;
-    font-size: 0.9rem;
-    margin-bottom: 15px;
-    margin-top: 15px;
-    padding-top: 8px;
-    padding-bottom: 6px;
-}
-
-
-/***************** 这里定义大纲的样式 ****************/
-
-.outline-item {
-    font-family: 'SF Pro', 'Noto Serif SC';
-    font-size: 0.8rem;
-    line-height: 1.35;
-}
-
-.outline-h2 .outline-label,
-.outline-h3 .outline-label,
-.outline-h4 .outline-label,
-.outline-h5 .outline-label,
-.outline-h6 .outline-label {
-    font-size: 0.7rem;
-}
-
-.sidebar-content {
-}
-
-.outline-h1 {
-}
-
-.outline-h2 {
-}
-
-.outline-h3 {
-}
-
-.outline-h4 {
-}
-
-.outline-h5 {
-}
-
-.outline-h6 {
-}
-
-
-/***************** 这里定义标题的样式 ****************/
-
-#write h1,
-#write h2,
-#write h3,
-#write h4,
-#write h5,
-#write h6 {
-    font-weight: normal;
-    font-family: 'Manjari', 'Noto Serif SC';
-}
-
-#write h1 {
-    font-size: 2.5rem;
-    color: black;
-    text-align: center;
-    margin-top: 3rem;
-    margin-bottom: 1.5rem;
-    font-style: bold;
-    font-family: 'Pinyon Script', 'Noto Serif SC';
-}
-
-#write h2 {
-    font-size: 1.3rem;
-    color: #285e8e;
-    margin-top: 1rem;
-    margin-bottom: 0.75rem;
-    text-align: center;
-}
-
-#write h3 {
-    color: brown;
-    font-size: 1.1rem;
-    margin-top: 0.75rem;
-    margin-bottom: 0.5rem;
-}
-
-#write h4,
-#write h5,
-#write h6 {
-    color: green;
-    font-size: 1rem;
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-}
-
-
-/***************** 这里定义列表的样式 ****************/
-
-ol li {
-    list-style-position: outside;
-}
-
-ul li {
-    list-style-position: outside;
-}
-
-li {
-    font-size: 1rem;
-    line-height: 1.75;
-    margin: 0.25rem;
-    font-family: 'SF Pro', 'Noto Serif SC';
-}
-
-li p {
-    font-size: 1rem;
-    line-height: 1.75;
-    margin: 0.25rem;
-    font-family: 'SF Pro', 'Noto Serif SC';
-}
-
-ul,
-ol {
-    margin: 0.5rem 0 0.5rem 0;
-}
-
-
-/***************** 这里定义段落的样式 ****************/
-
-p {
-    font-family: 'SF Pro', 'Noto Serif SC';
-    font-size: 1rem;
-    line-height: 1.75;
-    margin: 0.5rem 0 0.5rem 0;
-}
-
-
-/***************** 这里定义图片的样式 ****************/
-
-img {
-    margin: auto;
-    display: block;
-}
-
-
-/***************** 这里定义引用的样式 ****************/
-
-blockquote {
-    border-left: 5px solid #666;
-    background-color: #f0f0f0;
-    margin-top: 0.75rem;
-    margin-left: 0.375rem;
-    margin-right: 0.375rem;
-    margin-bottom: 0.75rem;
-}
-
-blockquote p {
-    font-family: 'SF Pro', 'Noto Serif SC';
-    padding: 0.25rem 0.5rem;
-    font-size: 1rem;
-    line-height: 1.75;
-    margin: 0rem;
-}
-
-
-/***************** 这里定义表格的样式 ****************/
-
-table {
-    position: relative;
-    font-family: 'SF Pro', 'Noto Serif SC';
-    width: 70%;
-    left: 15%;
-    *border-collapse: collapse;
-    border-spacing: 0;
-    border-top: solid black 2px;
-    border-bottom: solid black 2px;
-}
-
-table thead th {
-    border-bottom: 3px double black;
-}
-
-
-/***************** 这里定义打印或者导出PDF的样式 ****************/
-
-@media print {
-
-    /* for example: */
-    .typora-export * {
-        -webkit-print-color-adjust: exact;
-    }
-
-    /* add styles here */
-    @page {
-        margin-top: 20mm;
-        margin-bottom: 20mm;
-        margin-left: 1mm;
-        margin-right: 1mm;
-        size: A2;
-    }
-
-    #write {
-        max-width: 100%;
-    }
-}
 
 
 
