--- a/index.html
+++ b/index.html
@@ -222,6 +222,33 @@ mjx-container { break-inside: avoid; }
 /* Turing CSS */
 /* By Mistrza */
 
+/* TOC */
+.md-toc-h1 {
+    display: none;
+}
+
+.md-toc-h2 {
+    margin-left: -2em;
+}
+
+.md-toc-h3 {
+    margin-left: -2.5em;
+}
+
+.md-toc-h4 {
+    margin-left: -3em;
+}
+
+.md-toc-h5 {
+    margin-left: -3.5em; 
+}
+
+.md-toc-h6 {
+    margin-left: -4em;
+}
+
+
+
 /* 基本设置 */
 body {
      background-color: #fbfbfb; /* 背景颜色 */
@@ -269,7 +296,7 @@ h3 {
 
 
 h4::before, h5::before, h6::before {
-    content: '•'; /* 添加中间点符号 */
+    content: '▸'; /* 添加中间点符号 */
     margin-right: 0.5em; /* 点与文本之间的间距 */
     color: #333; /* 点的颜色 */
     font-size:1.2em;
@@ -350,6 +377,6 @@ hr {
 </style><title>index</title>
 </head>
 <body class='typora-export'><div class='typora-export-content'>
-<div id='write'  class=''><h1 id='my-blogs'><span>My Blogs</span></h1><p><span>[Overview]</span></p><div class='md-toc' mdtype='toc'><p class="md-toc-content" role="list"><span role="listitem" class="md-toc-item md-toc-h1" data-ref="n0"><a class="md-toc-inner" href="#my-blogs">My Blogs</a></span><span role="listitem" class="md-toc-item md-toc-h2" data-ref="n5"><a class="md-toc-inner" href="#machine-learning-algorithms">Machine Learning Algorithms</a></span><span role="listitem" class="md-toc-item md-toc-h3" data-ref="n6"><a class="md-toc-inner" href="#supervised-learning">supervised learning</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n7"><a class="md-toc-inner" href="#svmsvm">SVM(SVM)</a></span></p></div><hr /><h2 id='machine-learning-algorithms'><span>Machine Learning Algorithms</span></h2><h3 id='supervised-learning'><span>supervised learning</span></h3><h4 id='svmsvm'><span>SVM(</span><a href='./SVM.html'><span>SVM</span></a><span>)</span></h4><p>&nbsp;</p></div></div>
+<div id='write'  class=''><h1 id='my-blogs'><span>My Blogs</span></h1><p><span>[Overview]</span></p><div class='md-toc' mdtype='toc'><p class="md-toc-content" role="list"><span role="listitem" class="md-toc-item md-toc-h1" data-ref="n0"><a class="md-toc-inner" href="#my-blogs">My Blogs</a></span><span role="listitem" class="md-toc-item md-toc-h2" data-ref="n5"><a class="md-toc-inner" href="#machine-learning-algorithms">Machine Learning Algorithms</a></span><span role="listitem" class="md-toc-item md-toc-h3" data-ref="n6"><a class="md-toc-inner" href="#supervised-learning">supervised learning</a></span><span role="listitem" class="md-toc-item md-toc-h4" data-ref="n7"><a class="md-toc-inner" href="#svm-blog-of-svm">SVM (blog of SVM)</a></span></p></div><hr /><h2 id='machine-learning-algorithms'><span>Machine Learning Algorithms</span></h2><h3 id='supervised-learning'><span>supervised learning</span></h3><h4 id='svm-blog-of-svm'><span>SVM (</span><a href='./SVM.html'><span>blog of SVM</span></a><span>)</span></h4><p>&nbsp;</p></div></div>
 </body>
 </html>
